# picmix

./: .gitignore  LICENSE  README.md  analysis.py  config.json  debug_fluid.py  debug_fluid_plot.py  pyproject.toml  quick_test.py  quick_test_config.json  run_test.py  state.npz
crypto_files/: encrypted_data.npz
src/lagrangien/: main.py  utils.py
src/picmix/: __init__.py  cli.py  engine.py  io.py
src/strang_splitting/: main.py  t.py  utils.py
src/vortexcrypt/: __init__.py  cli.py  engine.py  io.py
test/analysis_results/: performance_report.txt  temp_state.npz
test/analysis_results/histogram/: hist_state.npz
test/analysis_scripts/: analysis_histogram.py  analyze_performance.py  analyze_reversibility.py  analyze_security.py  config_long.json  config_short.json  perf_config.json
