[project]
name = "picmix"
version = "0.1.0"
description = ""
authors = [
    {name = "FructueuxHollo",email = "fructueuxhollo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.24,<2.3)",
    "pillow (>=11.3.0,<12.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "typer[all] (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [{include = "picmix", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
